--- a/index.html
+++ b/index.html
@@ -7,36 +7,92 @@
     <title>Motion</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
+    <script src="https://kit.fontawesome.com/565efcc062.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <main>
         <section class="frame">
-            <h2>Motion</h2>
+            <h1>Motion</h1>
             <article>
-                <span class="open">open</span>
-                <span class="close">close</span>
+                <div class="txt">
+                    <h2>Classic</h2>
+                    <strong>Classical Music</strong>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <i class="fa-solid fa-layer-group"></i>
+                    <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut necessitatibus et
+                        facere temporibus modi deleniti ab praesentium provident assumenda porro asperiores, repudiandae
+                        illo ad, ullam in accusantium. Saepe, illum aspernatur.
+                    </div>
+                </div>
+                <div class="pic"><img src="img/pic1.jpg"></div>
+                <div class="open"><span>View detail page</span><i class="fa-solid fa-plus"></i></div>
+                <div class="close"><span>Go back</span><i class="fa-solid fa-minus"></i></div>
             </article>
             <article>
-                <span class="open">open</span>
-                <span class="close">close</span>
+                <div class="txt">
+                    <h2>Viola</h2>
+                    <strong>Classical Music</strong>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <i class="fa-solid fa-layer-group"></i>
+                    <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut necessitatibus et
+                        facere temporibus modi deleniti ab praesentium provident assumenda porro asperiores, repudiandae
+                        illo ad, ullam in accusantium. Saepe, illum aspernatur.
+                    </div>
+                </div>
+                <div class="pic"><img src="img/pic2.jpg"></div>
+                <div class="open"><span>View detail page</span><i class="fa-solid fa-plus"></i></div>
+                <div class="close"><span>Go back</span><i class="fa-solid fa-minus"></i></div>
             </article>
             <article>
-                <span class="open">open</span>
-                <span class="close">close</span>
+                <div class="txt">
+                    <h2>Piano</h2>
+                    <strong>Classical Music</strong>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <i class="fa-solid fa-layer-group"></i>
+                    <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut necessitatibus et
+                        facere temporibus modi deleniti ab praesentium provident assumenda porro asperiores, repudiandae
+                        illo ad, ullam in accusantium. Saepe, illum aspernatur.
+                    </div>
+                </div>
+                <div class="pic"><img src="img/pic3.jpg"></div>
+                <div class="open"><span>View detail page</span><i class="fa-solid fa-plus"></i></div>
+                <div class="close"><span>Go back</span><i class="fa-solid fa-minus"></i></div>
             </article>
             <article>
-                <span class="open">open</span>
-                <span class="close">close</span>
+                <div class="txt">
+                    <h2>Music</h2>
+                    <strong>Classical Music</strong>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <i class="fa-solid fa-layer-group"></i>
+                    <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut necessitatibus et
+                        facere temporibus modi deleniti ab praesentium provident assumenda porro asperiores, repudiandae
+                        illo ad, ullam in accusantium. Saepe, illum aspernatur.
+                    </div>
+                </div>
+                <div class="pic"><img src="img/pic4.jpg"></div>
+                <div class="open"><span>View detail page</span><i class="fa-solid fa-plus"></i></div>
+                <div class="close"><span>Go back</span><i class="fa-solid fa-minus"></i></div>
             </article>
             <article>
-                <span class="open">open</span>
-                <span class="close">close</span>
+                <div class="txt">
+                    <h2>Member</h2>
+                    <strong>Classical Music</strong>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <i class="fa-solid fa-layer-group"></i>
+                    <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut necessitatibus et
+                        facere temporibus modi deleniti ab praesentium provident assumenda porro asperiores, repudiandae
+                        illo ad, ullam in accusantium. Saepe, illum aspernatur.
+                    </div>
+                </div>
+                <div class="pic"><img src="img/pic5.jpg"></div>
+                <div class="open"><span>View detail page</span><i class="fa-solid fa-plus"></i></div>
+                <div class="close"><span>Go back</span><i class="fa-solid fa-minus"></i></div>
             </article>
         </section>
         <nav>
-            <p class="prev">prev</p>
-            <p class="next">next</p>
+            <p class="prev"><span>Prev page</span></p>
+            <p class="next"><span>Next page</span></p>
         </nav>
     </main>
 </body>
